# plotez

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  requirements[dev].txt  verify_implementation.py
.github/workflows/: code_coverage.yml  file_linting.yml  publish_plotez.yml
docs/: CHANGELOG.md  Makefile  api.rst  conf.py  index.rst  installation.rst  quickstart.rst
examples/: QUICKSTART_basic_errorbar.py  QUICKSTART_epc_from_dict.py  QUICKSTART_from_files.py  QUICKSTART_style_errorbar.py  README.md  README_E1_simple.py  README_E2_scientific_errorbars.py  README_E3_dual_y_axis.py  README_E4_multi_panel_grid.py  README_E5-1_error_band.py  README_E5-2_error_band.py  README_E6_full_customization.py  README_example1.py  README_example1A.py  README_example2.py  README_example2A.py  README_example3.py  README_example4.py  README_example4__errorbar.py  README_example5.py  RTD_E10_shared_axes.py  RTD_E11_from_files.py  RTD_E12_matplotlib_integration.py  RTD_E1_simple.py  RTD_E2_custom_labels.py  RTD_E3_scatter_plot.py  RTD_E4_errorbar.py  RTD_E5-2_errorbar_customized.py  RTD_E5_errorbar_customized.py  RTD_E6_asym_errors.py  RTD_E7_errorbands.py  RTD_E8_two_subplots.py  RTD_E9_grid_of_four.py  data.csv  sensor_data.csv
examplesNimages/: README_example3.py
md_SUMMARIES/: ERRORPLOT_REFACTORING_SUMMARY.md  FORMATTING_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md
src/: __init__.py
src/plotez/: __init__.py  plotez.py  typing.py  version.py
src/plotez/backend/: CONSTANTS.py  __init__.py  _wrappers.py  error_handling.py  utilities.py
src/tests/: __init__.py  test_plotez.py
src/tests/backend/: __init__.py  test_utilities.py
tests/: conftest.py  test_error_handling.py  test_errorplot.py  test_histogram.py  test_plotez.py  test_wrappers.py
