[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotez"
description = "Mundane plotting done easy."
authors = [{ name = "Syed Ali Mohsin Bukhari", email = "ali.mohsin@ist.edu.pk" }]

readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license-files = ["LICENSE"]
dynamic = ["version"]
dependencies = ["matplotlib"]
keywords = ["plotting", "visualization", "data visualization", "python plotting"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Visualization",
    "Intended Audience :: Science/Research",
]

[tool.setuptools.dynamic]
version = { attr = "plotez.version.__version__" }

[tool.your_package.contacts]
emails = ["ali.mohsin@ist.edu.pk", "syedali.b+github@outlook.com"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "sphinx",
    "cloud-sptheme",
    "black",
    "isort",
    "pydocstyle",
    "flake8",
    "pre-commit",
    "tomli",
    "build"
]

[project.urls]
Issues = "https://github.com/syedalimohsinbukhari/plotez/issues"
Repository = "https://github.com/syedalimohsinbukhari/plotez/"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120
color = true
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D100", "D104", "D105", "D107"]
match = "(?!test_).*.py"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["examples", "*tests*", "md_SUMMARIES*"]
